# desktop_weather

./: README.md
desktop_weather/: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
desktop_weather/main/: CMakeLists.txt  devapi_qweather_chain.pem  font_alipuhui.c  font_myawesome.c  gxhtc3.c  gxhtc3.h  idf_component.yml  lvgl_demo_ui.c  myi2c.c  myi2c.h  spi_lcd_touch_example_main.c
scan/: CMakeLists.txt  README.md  sdkconfig
scan/main/: CMakeLists.txt  Kconfig.projbuild  scan.c
sntp/: CMakeLists.txt  README.md  pytest_sntp.py  sdkconfig  sdkconfig.ci
sntp/main/: CMakeLists.txt  sntp_example_main.c
station/: sdkconfig
station/main/: station_example_main.c
weather/: CMakeLists.txt  README.md  pytest_esp_http_client.py  sdkconfig  sdkconfig.ci  sdkconfig.ci.ssldyn  sdkconfig.old
weather/main/: CMakeLists.txt  Kconfig.projbuild  esp_http_client_example.c  idf_component.yml
